@@ -1,3 +1,7 @@
+2000-01-15  Alan Modra  <alan@spri.levels.unisa.edu.au>
+
+	* gas/i386/general.{s,l}: Add jmp and call tests.
+
 Tue Nov 30 23:02:01 1999  Jeffrey A Law  (law@cygnus.com)
 
 	* gas/mn10300/{am33.s, am33_2.s, am33_3.s}: New test files.
